@@ -1,3 +1,5 @@
+HEAD
+	+ Added EBox::LdapUserBase::objectInDefaultContainer
 4.1.3
 	+ Remove deprecated bridged mode condition
 4.1.2
